<resources>
    <string name="APP_NAME">CryptoHub</string>
    <string name="APP_LAUNCHER">CryptoHub</string>
    <string name="facebook_app_id">209476682797236</string>
    <string name="roles">Shops,Users</string>
    <string name="cityDefault">Hà Nội</string>
    <string name="districtDefault">Ba Đình</string>
    <string name="TEXT_LOADING">Đang tải...</string>
    <string name="text_no_network">Lỗi kêt nối! Vui lòng kiểm tra lại đường truyền và thử lại!</string>
    <string name="text_request_error">Lỗi kêt nối! Vui lòng kiểm tra lại đường truyền và thử lại!</string>
    <string name="textInboxEmpty">Không tìm thấy thông báo nào!</string>
    <string name="textBefore">trước</string>
    <string name="textHour">giờ</string>
    <string name="textMinute">phút</string>
    <string name="textSecond">giây</string>
    <string name="textDay">ngày</string>
    <string name="textMonth">tháng</string>
    <string name="close_button">Đóng</string>
    <string name="txtConpyRight">© 2017 - iMesh</string>
    <string name="txtPleaseWait">Vui lòng chờ...</string>
    <string name="alertEmptyAccount">Vui lòng nhập tài khoản!</string>
    <string name="alertEmptyPassword">Vui lòng nhập mật khẩu!</string>
    <string name="alertEmptyConfirmPassword">Vui lòng xác nhận mật khẩu!</string>
    <string name="alertPasswordNotMatch">Mật khẩu và xác nhận mật khẩu không khớp!</string>
    <string name="alertInvalidPassword">Mật khẩu không hợp lệ!</string>
    <string name="alertEmptyPhone">Vui lòng nhập số điện thoại!</string>
    <string name="alertAcctionUnsucess">Thao tác không thành công! Vui lòng thử lại</string>
    <string name="alertInvalidAccount">Tài khoản không hợp lệ!</string>
    <string name="alertGPSOff">Không thể xác định vị trí của bạn. Vui lòng bật dịch vụ địa điểm!</string>
    <string name="alertActionFail">Thao tác không thành công! Vui lòng thử lại</string>
    <string name="alertNoOrderFound">Không tìm thấy đơn hàng nào!</string>
    <string name="alertNoStudentFound">Không tìm thấy sinh viên nào!</string>
    <string name="alertNoCustomerFound">Không có khách hàng nào!</string>
    <string name="alertNoConferenceFound">Không có hội nghị nào!</string>
    <string name="alertNoColleagueFound">Không có đồng nghiệp nào!</string>
    <string name="alertEmptyCompanyPhone">Vui lòng nhập tài số công ty!</string>
    <string name="alertEmptyPrivatePhone">Vui lòng nhập tài số máy lẻ!</string>
    <string name="alertEmptyCustomerName">Vui lòng nhập tên khách hàng!</string>
    <string name="alertEmptyExtPhone">Vui lòng nhập số máy lẻ!</string>
    <string name="alertEmptyCustomerCompanyName">Vui lòng nhập tên công ty!</string>
    <string name="alertEmptyPosition">Vui lòng nhập chức vụ!</string>
    <string name="alertEmptyPhoneNumber">Vui lòng nhập số điện thoại!</string>
    <string name="alertEmptyPhoneNumber2">Vui lòng nhập số điện thoại 2!</string>
    <string name="alertEmptyPhoneNumber3">Vui lòng nhập số điện thoại 3!</string>
    <string name="alertEmptyEmail">Vui lòng nhập email!</string>
    <string name="alertCreateCustomerSuccess">Thêm khách hàng thành công!</string>
    <string name="alertEditCustomerSuccess">Sửa thông tin khách hàng thành công!</string>
    <string name="alertCreateColleageGroupSuccess">Tạo nhóm đồng nghiệp thành công!</string>
    <string name="alertEditColleagueGroupSuccess">Sửa thông tin nhóm thành công!</string>
    <string name="alertDeleteColleagueGroupSuccess">Xoá nhóm thành công!</string>
    <string name="alertCreateConferenceSuccess">Tạo hội nghị thành công!</string>
    <string name="alertAddMemberSuccess">Thêm thành công!</string>
    <string name="alertNoData">Không có dữ liệu!</string>
    <string name="alertConnectFail">Lỗi kết nối!</string>
    <string name="labelDasboard">Dashboard</string>
    <string name="labelNotify">Notification</string>
    <string name="labelUpdate">UPDATE</string>
    <string name="labelChangePassword">CHANGE PASSWORD</string>
    <string name="labelConfirm">CONFIRM</string>
    <string name="labelConfirmLower">Xác nhận</string>
    <string name="labelCancel">Hủy</string>
    <string name="labelRetry">Retry</string>
    <string name="labelDelete">Delete</string>
    <string name="labelAccept">Đồng ý</string>
    <string name="lblClickViewDetail">Click to view detail</string>
    <string name="lblHintSearch">Type your search key</string>
    <string name="labelClose">Close</string>
    <string name="labelYes">Yes</string>
    <string name="labelNo">No</string>
    <string name="labelNotification">Notification</string>
    <string name="pick_image_intent_text">Select from</string>
    <string name="labelSetting">Thiết lập</string>
    <string name="labelNews">Tin tức</string>
    <string name="labelGuide">Hướng dẫn sử dụng</string>
    <string name="labelQA">Câu hỏi thường gặp</string>
    <string name="labelPolicy">Điều khoản &amp; chính sách</string>
    <string name="labelFeedback">Gửi phản hồi</string>
    <string name="labelDisconnect">Ngắt kết nối với thiết bị</string>
    <string name="labelMainHome">Coin Hub</string>
    <string name="labelPortFolio">Portfolio</string>
    <string name="labelCoinMarketCap">CoinmarketCap</string>
    <string name="labelCoinEvent">Events</string>
    <string name="labelIcos">ICOs</string>
    <string name="labelAbout">About</string>
    <string name="labelCustomer">Danh sách khách hàng</string>
    <string name="labelContact">Danh bạ điện thoại</string>
    <string name="labelKeyboard">Bàn phím</string>
    <string name="labelConferencCall">Thoại hội nghị</string>
    <string name="labelConferencList">Danh sách thoại hội nghị</string>
    <string name="labelVersionInfo">Thông tin phiên bản</string>
    <string name="labelServiceInfo">Giới thiệu dịch vụ</string>
    <string name="labelCreateColleagueGroup">Sửa / Tạo nhóm</string>
    <string name="labelCreateCustomer">Nhập thông tin khách hàng</string>
    <string name="labelEditCustomer">Sửa thông tin khách hàng</string>
    <string name="labelColleagueChoseGroup">Chọn nhóm</string>
    <string formatted="false" name="labelColleagueChoseMember">Tạo nhóm (%s/%s)</string>
    <string formatted="false" name="labelColleagueChoseEditMember">Sửa nhóm (%s/%s)</string>
    <string formatted="false" name="labelPickedList">Danh sách đã chọn (%s/%s)</string>
    <string name="hintCustomerName">Tên khách hàng</string>
    <string name="hintCustomerExtPhone">Số máy lẻ</string>
    <string name="hintCustomerCompany">Công ty</string>
    <string name="hintCustomerPosition">Chức vụ</string>
    <string name="hintCustomerPhonenumber">Số điện thoại</string>
    <string name="hintCustomerPhonenumber2">Số điện thoại 2</string>
    <string name="hintCustomerPhonenumber3">Số điện thoại 3</string>
    <string name="hintCustomerEmail">Email</string>
    <string name="labelDepartment">Tên bộ phận</string>
    <string name="labelCompany">Công ty</string>
    <string name="labelPosition">Chức vụ</string>
    <string name="labelPrivatePhone">Số máy lẻ</string>
    <string name="labelMainPhone">Số thường dùng</string>
    <string name="labelPrivatePhone2">Số điện thoại 2</string>
    <string name="labelPrivatePhone3">Số điện thoại 3</string>
    <string name="labelEmail">Email</string>
    <string name="edtAccountHint">Tài khoản</string>
    <string name="edtPasswordHint">Mật khẩu</string>
    <string name="btnLogin">ĐĂNG NHẬP</string>
    <string name="btnLogout">Đăng xuất</string>
    <string name="txtSignUpNewAccount">Đăng ký tài khoản</string>
    <string name="txtForgetPassword">Quên mật khẩu</string>
    <string name="alertLoginFail">Đăng nhập không thành công!</string>
    <string name="alertLogoutFail">Đăng xuất không thành công!</string>
    <string name="msgExitApp">Nhấn back lần nữa để thoát ứng dụng!</string>
    <string name="msgLogoutApp">Bạn muốn đăng xuất khỏi tài khoản hiện tại?</string>
    <string name="txtSignUpHeader">Đăng ký tài khoản</string>
    <string name="edtSignUpAccountLabelText">Tài khoản</string>
    <string name="edtSignUpAccountHint">Nhập tài khoản</string>
    <string name="edtSignUpEmailLabelText">Email</string>
    <string name="edtSignUpEmailHint">Nhập email</string>
    <string name="edtSignUpShopAddressLabelText">Địa chỉ gửi hàng</string>
    <string name="edtSignUpShopAddressHint">Nhập địa chỉ shop của bạn</string>
    <string name="edtSignUpChoseAddressLabelText">Quận/Huyện - Tỉnh/Thành phố</string>
    <string name="edtSignUpChoseAddressHint">Nhấp để chọn</string>
    <string name="edtSignUpPhoneLabelText">Số điện thoại</string>
    <string name="edtSignUpPhoneCodeLabelText">Mã quốc gia</string>
    <string name="edtSignUpPhoneHint">Nhập SĐT</string>
    <string name="edtSignUpPasswordLabelText">Mật khẩu</string>
    <string name="edtSignUpPasswordHint">Nhập mật khẩu</string>
    <string name="edtSignUpConfirmPasswordLabelText">Xác nhận mật khẩu</string>
    <string name="edtSignUpConfirmPasswordHint">Nhập lại mật khẩu</string>
    <string name="edtSignUpNoteTextLabel">Giới thiệu bản thân</string>
    <string name="edtSignUpNoteHint">Giới thiệu chung về trình độ chuyên môn, kinh nghiệm giảng dạy, các lớp đang dạy...</string>
    <string name="btnSignUp">ĐĂNG KÝ</string>
    <string name="txtRegitserSuccessLabel">Đăng ký tài khoản thành công! Bạn có thể đăng nhập để bắt đầu sử dụng!</string>
    <string name="txtRegitserSuccessMessage">Bạn đã đăng ký tài khoản thành công! Bạn có thể sử dụng tài khoản và mật khẩu vừa đăng ký để đăng nhập vào ứng dụng</string>
    <string name="txtRegitserPolicyPart1">Với việc đăng ký tài khoản, bạn đã chấp nhận điều khoản sử dụng của chúng tôi</string>
    <string name="txtRegitserPolicyPart2">điều khoản sử dụng</string>
    <string name="alertNotAgreePolyci">Xin lỗi, để đăng ký tài khoản bạn phải chấp nhận điều khoản sử dụng</string>
    <string name="errorEmptyAccount">Tài khoản không được để trống!</string>
    <string name="errorEmptyCurrentPassword">Mật khẩu hiện tại không được để trống!</string>
    <string name="errorEmptyPassword">Mật khẩu không được để trống!</string>
    <string name="errorEmptyNewPassword">Mật khẩu mới không được để trống!</string>
    <string name="errorEmptyConfirmPassword">Xác nhận mật khẩu không được để trống!</string>
    <string name="errorPasswordNotMatch">Mật khẩu và xác nhận mật khẩu không khớp!</string>
    <string name="errorInvalidPassword">Mật khẩu không hợp lệ!</string>
    <string name="errorEmptyEmail">Email không được để trống!</string>
    <string name="errorEmptyPhone">Số điện thoại không được để trống!</string>
    <string name="errorEmptyShopAddress">Địa chỉ shop không được để trống!</string>
    <string name="errorEmptyChoseAddress">Bạn chưa chọn Quận/Huyện - Tỉnh/Thành phố!</string>
    <string name="errorEmptyCOD">COD không được để trống!</string>
    <string name="edtForgetPassEmailHint">Email</string>
    <string name="btnGetPassword">LẤY LẠI MẬT KHẨU</string>
    <string name="alertGetPasswordSuccess">Thao tác thành công! Vui lòng kiểm tra email!</string>
    <string name="createOrderTitle">Tạo đơn hàng</string>
    <string name="confirmCreateOrder">Bạn có chắc chắn muốn tạo đơn hàng này?</string>
    <string name="confirmCancelOrder">Bạn có chắc chắn muốn hủy tạo đơn hàng này?</string>
    <string name="edtCreateSenderNameLabel">Tên người gửi</string>
    <string name="edtCreateSenderNameHint">Nhập tên người gửi</string>
    <string name="edtCreateReceiverNameLabel">Tên người nhận</string>
    <string name="edtCreateReceiverNameHint">Nhập tên người nhận</string>
    <string name="edtSearchLocationHint">Tìm kiếm Google Maps</string>
    <string name="edtCODHint">Nhập số tiền thu hộ bằng VNĐ</string>
    <string name="edtCODLabelText">Tiền thu hộ</string>
    <string name="edtGoodHint">Mô tả hàng hoá</string>
    <string name="edtGoodLabelText">Thông tin</string>
    <string name="edtGoodSizeHint">Dài x Rộng x Cao</string>
    <string name="edtGoodSizeLabelText">Kích thước</string>
</resources>