<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/layout_header_second"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPersonalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layoutHeader"
        android:padding="16dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avatar2"
            />
        <EditText
            style="@style/EdittextStyle"
            android:layout_marginLeft="16dp"
            android:text="Phan Năng Duy"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutPersonalInfo"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/edtCompanyName"
            style="@style/EdittextStyle"
            android:hint="@string/hintCustomerCompany"
            android:maxLength="100"
            />
        <EditText
            android:id="@+id/edtPosition"
            style="@style/EdittextStyle"
            android:hint="@string/hintCustomerPosition"
            android:maxLength="100"
            android:layout_marginTop="@dimen/margin_item"
            />
        <EditText
            android:id="@+id/edtPhonenumber"
            style="@style/EdittextStyle"
            android:hint="@string/hintCustomerPhonenumber"
            android:inputType="phone"
            android:maxLength="11"
            android:layout_marginTop="@dimen/margin_item"
            />
        <EditText
            android:id="@+id/edtPhonenumber2"
            style="@style/EdittextStyle"
            android:hint="@string/hintCustomerPhonenumber2"
            android:inputType="phone"
            android:maxLength="11"
            android:layout_marginTop="@dimen/margin_item"
            />
        <EditText
            android:id="@+id/edtPhonenumber3"
            style="@style/EdittextStyle"
            android:hint="@string/hintCustomerPhonenumber3"
            android:inputType="phone"
            android:maxLength="11"
            android:layout_marginTop="@dimen/margin_item"
            />
        <EditText
            android:id="@+id/edtEmail"
            style="@style/EdittextStyle"
            android:hint="@string/hintCustomerEmail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/margin_item"
            android:maxLength="100"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/drawable_button_login"
            android:layout_marginTop="@dimen/margin_edt"
            android:onClick="onClickSave"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="Lưu lại"
                />
        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutHeader"
        android:background="#44000000"
        android:visibility="gone"
        >

        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:id="@+id/progressBarCircularIndeterminate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@color/white" />
    </RelativeLayout>

</RelativeLayout>