<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.gc.materialdesign.views.ScrollView
            android:id="@+id/layoutInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layoutHeader"
            android:paddingTop="@dimen/margin_border">

            <LinearLayout
                android:id="@+id/layoutLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingBottom="40dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="187dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/slogan_margin_top"
                    android:contentDescription="@string/APP_NAME"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />

                <com.phanduy.view.custom.EdittextWithFont
                    android:id="@+id/edtAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/slogan_margin_top"
                    android:hint="@string/edtSignUpAccountHint"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    app:met_clearButton="false"
                    app:met_underline_height="1"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelText="@string/edtSignUpAccountLabelText"
                    app:met_floatingLabelTextColor="@color/black54"
                    app:met_underlineColor="@color/black12"
                    app:met_errorColor="@color/red"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/secondary"
                    app:met_baseColor="@color/black54"
                    app:met_textColorHint="@color/black54"
                    font:type="4" />

                <com.phanduy.view.custom.EdittextWithFont
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_edt"
                    android:hint="@string/edtSignUpEmailHint"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    app:met_clearButton="false"
                    app:met_underline_height="1"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelText="@string/edtSignUpEmailLabelText"
                    app:met_floatingLabelTextColor="@color/black54"
                    app:met_underlineColor="@color/black12"
                    app:met_errorColor="@color/red"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/secondary"
                    app:met_baseColor="@color/black54"
                    app:met_textColorHint="@color/black54"
                    font:type="4"/>

                <com.phanduy.view.custom.EdittextWithFont
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_edt"
                    android:hint="@string/edtSignUpPhoneHint"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    app:met_clearButton="false"
                    app:met_underline_height="1"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelText="@string/edtSignUpPhoneLabelText"
                    app:met_floatingLabelTextColor="@color/black54"
                    app:met_underlineColor="@color/black12"
                    app:met_errorColor="@color/red"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/secondary"
                    app:met_baseColor="@color/black54"
                    app:met_textColorHint="@color/black54"
                    font:type="4"/>


                <com.phanduy.view.custom.EdittextWithFont
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_edt"
                    android:hint="@string/edtSignUpPasswordHint"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:singleLine="true"

                    app:met_clearButton="false"
                    app:met_underline_height="1"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelText="@string/edtSignUpPasswordLabelText"
                    app:met_floatingLabelTextColor="@color/black54"
                    app:met_underlineColor="@color/black12"
                    app:met_errorColor="@color/red"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/secondary"
                    app:met_baseColor="@color/black54"
                    app:met_textColorHint="@color/black54"
                    font:type="4" />

                <com.phanduy.view.custom.EdittextWithFont
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_edt"
                    android:hint="@string/edtSignUpConfirmPasswordHint"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    app:met_clearButton="false"
                    app:met_underline_height="1"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelText="@string/edtSignUpConfirmPasswordLabelText"
                    app:met_floatingLabelTextColor="@color/black54"
                    app:met_underlineColor="@color/black12"
                    app:met_errorColor="@color/red"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/secondary"
                    app:met_baseColor="@color/black54"
                    app:met_textColorHint="@color/black54"
                    font:type="4" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="@dimen/margin_edt"
                    android:orientation="horizontal" >

                    <com.rey.material.widget.CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/secondary"
                        />

                    <LinearLayout
                        android:id="@+id/btnAgreePolicy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp" >

                        <com.phanduy.view.custom.TextViewWithFont
                            android:id="@+id/textAgreementTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            font:type="4"
                            />
                    </LinearLayout>
                </LinearLayout>



                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_edt" />
                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/drawable_fill_primary_color_55"
                    android:onClick="onClickBtnRegister"
                    android:text="@string/btnSignUp"
                    android:textColor="@color/white"
                    >
                </Button>
            </LinearLayout>
        </com.gc.materialdesign.views.ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/drawable_shadow_down"
            android:layout_below="@+id/layoutHeader"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutHeader"
        android:background="#44000000" >

        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:id="@+id/progressBarCircularIndeterminate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@color/white" />
    </RelativeLayout>

</FrameLayout>