<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.phanduy.view.custom.TextViewWithFont
            android:id="@+id/textCopyRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/txtConpyRight"
            font:type="3" />

        <!--<LinearLayout-->
            <!--android:id="@+id/buttonBack"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingBottom="20dp"-->
            <!--android:paddingLeft="20dp"-->
            <!--android:paddingRight="40dp"-->
            <!--android:paddingTop="20dp">-->

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@null"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:tint="@color/white"-->
                <!--android:src="@drawable/ic_arrow_back_white_24dp" />-->
        <!--</LinearLayout>-->

        <RelativeLayout
            android:id="@+id/buttonBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="onClickBack"
            android:layout_margin="4dp"
            android:background="@drawable/drawable_transparent_press_circle"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:layout_centerInParent="true"
                android:scaleType="fitCenter"
                android:tint="@color/white" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_below="@+id/buttonBack"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/APP_NAME"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <com.phanduy.view.custom.EdittextWithFont
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/edtSignUpEmailHint"
            android:imeOptions="actionNext"
            android:singleLine="true"

            app:met_clearButton="false"
            app:met_errorColor="@color/white"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/edtSignUpEmailLabelText"
            app:met_floatingLabelTextColor="@color/grayItem"
            app:met_underlineColor="@color/grayItem"
            app:met_hideUnderline="false"
            app:met_underline_height="1"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_textColorHint="@color/gray"
            font:type="10" />

        <!--<Button-->
            <!--android:id="@+id/buttonGetPassword"-->
            <!--style="@style/MyButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_below="@+id/edtEmail"-->
            <!--android:layout_marginLeft="45dp"-->
            <!--android:layout_marginRight="43dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:text="GET PASSWORD"-->
            <!--android:textColor="@android:color/holo_green_dark"></Button>-->

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@+id/edtEmail"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_fill_primary_color_55"
            android:onClick="onClickGetPass"
            android:text="@string/btnGetPassword"
            android:textColor="@color/white"
            >

        </Button>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutHeader"
        android:visibility="gone"
        android:background="#44000000">

        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:id="@+id/progressBarCircularIndeterminate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@color/white" />
    </RelativeLayout>


</FrameLayout>